# dobby

./: .gitignore  CHANGELOG.md  COOKER.md  LICENSE  README.md  build.zig  build.zig.zon  clibs.zig  device.zig  gpu_context.zig  helper.zig  instance.zig  main.zig  pipeline.zig  renderer.zig  sdl.zig  setup.zig  x11.zig
.github/workflows/: rust.yml
assets/cooked/atlases/: atlas_0.ktx2  manifest.json
assets/cooked/shaders/: triangle.frag.spv  (+1 more)
base_shaders/: triangle.vert.glsl
dobby_engine/: .gitignore  Cargo.toml  Changelog.md
dobby_engine/src/: main.rs
dobby_engine/src/debug/: vulkan.rs
dobby_engine/src/platform/: window.rs
dobby_engine/src/rendering/: command.rs  descriptor.rs  device.rs  framebuffer.rs  memory.rs  mod.rs  pipeline.rs  render_pass.rs  renderer.rs  swapchain.rs  sync.rs  texture_map.rs  texture_sampler.rs  ubo.rs  vertex_data.rs  vulkan_app.rs
dobby_engine/src/shaders/: compile.sh  shader.frag  shader.vert
platform/: x11.zig
rendering/: clibs.zig  device.zig  instance.zig  pipeline.zig  renderer.zig
shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: '  build.zig  clibs.zig  core.zig  helper.zig  main.zig  math.zig  pipeline.zig  render.zig  sdl.zig  swapchain.zig  swapchain_bundle.zig  textures.zig  vulkan.zig
src/apps/: cooker_main.zig  editor_sdl_main.zig  game_main.zig
src/engine/: clibs.zig  controls.zig  core.zig  engine.zig  helper.zig  render.zig  sdl.zig  swapchain.zig  textures.zig
src/game_api/: game_api.zig
src/utils/: algo.zig  atlas.zig  ecs.zig  math.zig  notify.zig  sdl.zig  two_bit.zig  utils.zig
(+2 files in other folders)
