[package]
name = "dobby_engine"
version = "0.1.0"
edition = "2024"

[dependencies]

log = "0.4" # Logging framework

env_logger = "0.10" # Log output for debugging

winit = { version = "0.28", features = ["x11"] }  # Windowing and event handling

gilrs = "0.9" # Gamepad input support

imgui = "0.11" # In engine debug

imgui-winit-support = "0.3" # Debug support for winit in engine

serde = { version = "1.0", features = ["derive"] } # Log input events into a json file

serde_json = "1.0" # Log input events into a json file


