[package]
name = "dobby_engine"
version = "0.0.6"
edition = "2024"

[dependencies]

log = "0.4" # Logging framework

env_logger = "0.10" # Log output for debugging

winit = { version = "0.29", features = ["x11"] }  # Windowing and event handling

gilrs = "0.9" # Gamepad input support

serde = { version = "1.0", features = ["derive"] } # Log input events into a json file

serde_json = "1.0" # Log input events into a json file

anyhow = "1"

cgmath = "0.18"

png = "0.17"

pretty_env_logger = "0.5"

thiserror = "1"

tobj = { version = "3" , features = ["log"] }

vulkanalia = { version = "=0.28.0" , features = ["libloading" , "provisional", "window"] }

shaderc = "0.8"

bytemuck = "1.14"

